# rageval

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: baseline.yaml
docs/: architecture.md
examples/: sample_documents.jsonl  sample_questions.jsonl
src/rageval/chunking/: fixed.py
src/rageval/cli/: app.py
src/rageval/core/: config.py  schema.py  starter_config.py
src/rageval/datasets/: jsonl.py  starter.py
src/rageval/embeddings/: base.py  hash.py
src/rageval/evaluators/: runner.py
src/rageval/metrics/: retrieval.py
src/rageval/reports/: markdown.py
src/rageval/retrievers/: dense.py
src/rageval/validation/: config.py  dataset.py
src/rageval/vectorstores/: memory.py
tests/: test_chunking.py  test_cli.py  test_config_validation.py  test_metrics.py  test_starter_config.py  test_starter_dataset.py  test_validation.py
