[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rageval"
version = "0.1.0"
description = "A professional evaluation framework for Retrieval-Augmented Generation systems."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Kagan Ulker" }]
keywords = ["rag", "evaluation", "llm", "retrieval", "ai", "benchmark"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "rich>=13.7.0",
    "numpy>=1.26.0,<2.0.0",
    "pandas>=2.2.0",
    "pyyaml>=6.0.1",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
local = [
    "sentence-transformers>=3.0.0",
    "faiss-cpu>=1.8.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.scripts]
rageval = "rageval.cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["src/rageval"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --cov=rageval --cov-report=term-missing"
